added files for f2fs but did not add flasg. Enabled supply_power for OTG on fs. Added TW_SCREEN_BLANK_ON_BOOT to see if it can fix black screen at startup. Excluded supersu. Added custom lun path for mass_storage.

--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -28,6 +28,7 @@ on init
     setprop crypto.ready 1
 
 on fs
+    write /sys/class/power_supply/usb/otg_switch 1
     export ANDROID_ROOT /system_root
 
 on post-fs-data
@@ -82,6 +83,9 @@ service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service
     disabled
     seclabel u:r:recovery:s0
 
+on boot
+    setprop sys.usb.config adb
+    
 on property:crypto.ready=0
     stop keymaster-3-0
     stop gatekeeper-1-0
